@@ -1,5 +1,14 @@
 2007-07-11  Dan Williams  <dcbw@redhat.com>
 
+	* include/NetworkManager.h
+		- Add MESH_OLPC capability for access points
+
+	* src/nm-device-802-11-wireless.c
+		- (process_scan_results): detect MESH_OLPC capability on scanned BSSs
+			and set the MESH_OLPC bit in the AP's capabilities
+
+2007-07-11  Dan Williams  <dcbw@redhat.com>
+
 	* src/dhcp-manager/nm-dhcp-manager.c
 		- (nm_dhcp_dbus_set_state): only cancel the DHCP timeout when the DHCP
 			client gets a valid lease
